| Summary: | ASTERISK-26034: T.38 passthrough problem behind firewall due to early nosignal packet | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2016-05-18 07:50:16 | Date Closed: | 2016-05-18 17:51:00 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/UDPTL |
| Versions: | SVN 11.21.2 13.9.1 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Fax connection fails because none of the UDPTL nosignal indication packets from the CPE makes it through the provider port to open the firewall. It seems that Asterisk UDPTL stack is not ready to transport the packet, because there was no 200 OK from the partner yet. (Maybe because maximum packet size is unknown yet). But nevertheless the UDPTL stack processes the sequence number, so following nosignal packets with the same sequence number are discarded.
| ||
| Comments: | |||